--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,11 +1,11 @@
 <resources>
-    <string name="app_name">Tic Tac Toe</string>
+    <string name="app_name" translatable="false">Tic Tac Toe</string>
 
     <string-array name="DropDown">
         <item>Easy</item>
         <item>Hard</item>
     </string-array>
-    <string name="title_activity_help_and_tutorial">HelpAndTutorial</string>
+    <string name="title_activity_help_and_tutorial" translatable="false">HelpAndTutorial</string>
     <!-- Strings used for fragments for navigation -->
     <string name="first_fragment_label">First Fragment</string>
     <string name="second_fragment_label">Second Fragment</string>
